syntax = "proto3";
package node_write_service.v1;

// import "node/v1/node.proto";

service NodeWriteService {
    rpc CreateTransaction (CreateTransactionRequest) returns (TransactionRecord);
    rpc CreateAccount (CreateAccountRequest) returns (Account);
    rpc UpdateAccount(UpdateAccountRequest) returns (Account);
}

message CreateTransactionRequest {
    int64 timestamp = 1;
    string sender_address = 2;
    string sender_public_key = 3;
    string receiver_address = 4;
    Token token = 5;
    uint64 amount = 6;
    string signature = 7;
    map<string, bool> validators = 8;
    uint64 nonce = 9;
}

message CreateAccountRequest {
    string address = 1;
    Account account = 2;
}

message UpdateAccountRequest {
    Account account = 1;
}

message TransactionRecord {
    string id = 1;
    int64 timestamp = 2;
    string sender_address = 3;
    string sender_public_key = 4;
    string receiver_address = 5;
    Token token = 6;
    uint64 amount = 7;
    string signature = 8;
    map<string, bool> validators = 9;
    uint64 nonce = 10;
}

message Token {
    string name = 1;
    string symbol = 2;
    uint32 decimals = 3;
}

message Account {
    string hash = 1;
    uint64 account_nonce = 2;
    uint64 credits = 3;
    uint64 debits = 4;
    string storage = 5;
    string code = 6;
    string pubkey = 7;            // check
    AccountDigests digests = 8;
    int64 created_at = 9;
    int64 updated_at = 10;
}

message AccountDigests {
    TransactionDigest sent = 1;   // check
    TransactionDigest recv = 2;   // check
    TransactionDigest stake = 3;  // check
}

message TransactionDigest {
    string inner = 1;             // check
    string digest_string = 2;     // check
}
